--- a/index.html
+++ b/index.html
@@ -1,12 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <!-- css stylesheet -->
+  <link rel="stylesheet" href="./styles/style.css">
+
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&family=Poppins:wght@700&family=Updock&family=Work+Sans:wght@700&display=swap"
+    rel="stylesheet">
+
+
 </head>
+
 <body>
-  
+  <header class="header">
+    <!-- G3 Architects -->
+    <nav>
+      <h1 class="nav-title">G3 Architects</h1>
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact Us</li>
+        <li>Login</li>
+      </ul>
+    </nav>
+
+    <!-- Brand New Group of Architects  -->
+
+    <div class="brand">
+      <h1 class="brand-title">Brand New</p>
+        <h1 class="brand-title">Group of Architects</h1>
+        <p class="brand-description">There are many variations of passages of Lorem Ipsum available, but the majority
+          have suffered alteration in some form,
+          by injected humour, or randomised words which don't look even</p>
+    </div>
+    <button class="btn-explore">Explore More</button>
+    <div class="banner">
+      <img src="./images/banner.png" alt="">
+    </div>
+  </header>
+  <main>
+    <!-- Quick list of Our Features -->
+    <section>
+      <div class="list-of-our">
+        <div class="list-image">
+          <img src="./images/team1.png" alt="">
+          <img src="./images/team2.png" alt="">
+          <img src="./images/team3.png" alt="">
+          <img src="./images/team4.png" alt="">
+        </div>
+        <div class="list-info">
+          <h2 class="list-title">Quick list <span class="text-of-our">of Our </span><span
+              class="text-features">Features</span></h2>
+          <p class="list-description">There are many variations of passages of Lorem Ipsum available, but the majority
+            have suffered alteration in some form,
+            by injected humour, or randomised words which don't look even</p>
+          <button class="btn-more">Explore More</button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Features you will love & enjoy -->
+    <section class="love-enjoy">
+      <div class="skills-container">
+        <div>
+          <h1 class="skill-title">Features you will love & enjoy</h1>
+          <p class="skill-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            in some form,
+            by injected humour, or randomised words which don't look even</p>
+            <div class="skill-grid">
+              <div class="skill-item">
+                <h2 class="skill-info">Desktop & Mobile Version</h2>
+                <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+                  form,
+                  by injected humour, or randomised...........</p>
+              </div>
+              <div class="skill-item">
+                <h2 class="skill-info">Drag & Drop Builder</h2>
+                <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+                  form,
+                  by injected humour, or randomised...........</p>
+              </div>
+              <div class="skill-item">
+                <h2 class="skill-info">Awesome Modern Design</h2>
+                <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+                  form,
+                  by injected humour, or randomised...........</p>
+              </div>
+              <div class="skill-item">
+                <h2 class="skill-info">Super Easy to Edit</h2>
+                <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
+                  form,
+                  by injected humour, or randomised...........</p>
+              </div>
+            </div>
+        </div>
+        <div class="div-img">
+          <img src="./images/architect.png" alt="">
+          <button class="btn-experience">10+Year<br><span class="experience">Experience</span></button>
+        </div>
+      </div>
+      
+    </section>
+  </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <footer></footer>
 </body>
+
 </html>
