--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>G3 Architects</title>
 
   <!-- css stylesheet -->
   <link rel="stylesheet" href="./styles/style.css">
@@ -72,65 +72,135 @@
     <section class="love-enjoy">
       <div class="skills-container">
         <div>
-          <h1 class="skill-title">Features you will love & enjoy</h1>
-          <p class="skill-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-            in some form,
-            by injected humour, or randomised words which don't look even</p>
-            <div class="skill-grid">
-              <div class="skill-item">
-                <h2 class="skill-info">Desktop & Mobile Version</h2>
-                <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
-                  form,
-                  by injected humour, or randomised...........</p>
-              </div>
-              <div class="skill-item">
-                <h2 class="skill-info">Drag & Drop Builder</h2>
-                <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
-                  form,
-                  by injected humour, or randomised...........</p>
-              </div>
-              <div class="skill-item">
-                <h2 class="skill-info">Awesome Modern Design</h2>
-                <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
-                  form,
-                  by injected humour, or randomised...........</p>
-              </div>
-              <div class="skill-item">
-                <h2 class="skill-info">Super Easy to Edit</h2>
-                <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some
-                  form,
-                  by injected humour, or randomised...........</p>
-              </div>
+          <h1 class="skill-title">Features you will <br> love & enjoy</h1>
+          <p class="skill-description">There are many variations of passages of Lorem Ipsum available, but the<br>
+            majority have suffered alteration in some form,by injected humour, or<br>
+            randomised words which don't look even</p>
+          <div class="skill-grid">
+            <div class="skill-item">
+              <h2 class="skill-info">Desktop & Mobile Version</h2>
+              <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration in some
+                form,
+                by injected humour, or randomised...........</p>
             </div>
+            <div class="skill-item">
+              <h2 class="skill-info">Drag & Drop Builder</h2>
+              <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration in some
+                form,
+                by injected humour, or randomised...........</p>
+            </div>
+            <div class="skill-item">
+              <h2 class="skill-info">Awesome Modern Design</h2>
+              <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration in some
+                form,
+                by injected humour, or randomised...........</p>
+            </div>
+            <div class="skill-item">
+              <h2 class="skill-info">Super Easy to Edit</h2>
+              <p class="info-details">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration in some
+                form,
+                by injected humour, or randomised...........</p>
+            </div>
+          </div>
         </div>
         <div class="div-img">
           <img src="./images/architect.png" alt="">
           <button class="btn-experience">10+Year<br><span class="experience">Experience</span></button>
         </div>
       </div>
-      
+    </section>
+
+    <!-- Some section -->
+    <section class="some-section">
+      <div class="some-container">
+        <!-- <div> -->
+        <h2 class="some-title">Some Facts</h2>
+        <p class="some-description">There are many variations of passages of Lorem Ipsum available, but the majority
+          have
+          suffered alteration.</p>
+        <!-- </div> -->
+      </div>
+    </section>
+
+    <!-- facts section -->
+    <section class="facts-section">
+      <div class="facts-flex">
+        <div class="some">
+          <img class="clients-icon" src="./images/icons/ribon.png" alt="">
+          <h1 class="clients-title">54</h1>
+          <p class="clients-desription">Awards Winnings</p>
+        </div>
+        <div class="some">
+          <img class="clients-icon" src="./images/icons/projects.png" alt="">
+          <h1 class="clients-title">1458</h1>
+          <p class="clients-desription">Project Finished</p>
+        </div>
+        <div class="some">
+          <img class="clients-icon" src="./images/icons/customers.png" alt="">
+          <h1 class="clients-title">590</h1>
+          <p class="clients-desription">Clients Worked</p>
+        </div>
+        <div class="some">
+          <img class="clients-icon" src="./images/icons/email.png" alt="">
+          <h1 class="clients-title">22578</h1>
+          <p class="clients-desription">Email Send</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Our Sponspors -->
+    <section>
+      <div>
+        <h1 class="sponspors-title">Our Sponsors</h1>
+        <p class="sponspors-description">There are many variations of passages of Lorem Ipsum available, but <br> the
+          majority have suffered alteration.
+        </p>
+        <div class="players">
+          <div class="player">
+            <img src="./images/players/player-1.png" alt="">
+          </div>
+          <div class="player">
+            <img src="./images/players/player-2.png" alt="">
+          </div>
+          <div class="player">
+            <img src="./images/players/player-3.png" alt="">
+          </div>
+          <div class="player">
+            <img src="./images/players/player-4.png" alt="">
+          </div>
+        </div>
+        <div>
+          <h1 class="company-title">Sponsor Company</h1>
+          <div class="company">
+            <a href="">
+              <img src="./images/sponsors/spotify.png" alt="">
+            </a>
+            <a href="">
+              <img src="./images/sponsors/amazon.png" alt="">
+            </a>
+            <a href="">
+              <img src="./images/sponsors/google.png" alt="">
+            </a>
+            <a href="">
+              <img src="./images/sponsors/telerama.png" alt="">
+            </a>
+            <a href="">
+              <img src="./images/sponsors/figma.png" alt="">
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  <footer></footer>
+  <footer>
+    <div class="footer-section">
+      <pre class="footer-title">All rights reserved copyright@2023 startup landing page design</>
+    </div>
+  </footer>
 </body>
 
 </html>
