--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header ">
     <!-- G3 Architects -->
     <nav>
       <h1 class="nav-title">G3 Architects</h1>
@@ -39,7 +39,7 @@
       <h1 class="brand-title">Brand New</p>
         <h1 class="brand-title">Group of Architects</h1>
         <p class="brand-description">There are many variations of passages of Lorem Ipsum available, but the majority
-          have suffered alteration in some form,
+          have suffered alteration in<br> some form,
           by injected humour, or randomised words which don't look even</p>
     </div>
     <button class="btn-explore">Explore More</button>
@@ -107,6 +107,7 @@
             </div>
           </div>
         </div>
+        
         <div class="div-img">
           <img src="./images/architect.png" alt="">
           <button class="btn-experience">10+Year<br><span class="experience">Experience</span></button>
@@ -198,7 +199,7 @@
   </main>
   <footer>
     <div class="footer-section">
-      <pre class="footer-title">All rights reserved copyright@2023 startup landing page design</>
+      <pre class="footer-title">All rights reserved copyright@2023 startup landing page design</pre>
     </div>
   </footer>
 </body>
